--- a/.config/i3/config
+++ b/.config/i3/config
@@ -186,19 +186,24 @@ client.placeholder      #444444 #111111 #$fgcolor #000000   #444444
 client.background       #444444
 
 # Assign workspaces
-assign [class="firefox"] $ws1
+assign [class="google-chrome"] $ws1
 for_window [instance="scratchpad"] move window to scratchpad
+for_window [instance="floatterm"] move window to scratchpad
 for_window [class=".*"] border pixel 1
 
 # startup commands
 exec --no-startup-id dunst
 exec --no-startup-id google-chrome-stable
 exec st -n scratchpad -e python -iqc "from math import *" 
-exec --no-startup-id i3-msg 'workspace 2; append_layout /home/captaindavinci/.config/i3/startup-workspace2.json; exec st; exec st'; 
+exec --no-startup-id i3-msg 'workspace 2; append_layout /home/captaindavinci/.config/i3/workspace-2.json; exec st; exec st; exec st'; 
 
 # custom binding
 bindsym $mod+shift+p exec st -n scratchpad -e python -iqc "from math import *"
 bindsym $mod+p [instance="scratchpad"] scratchpad show
+
+bindsym $mod+shift+t exec --no-startup-id "st -n floatterm bash"
+bindsym $mod+t [instance="floatterm"] scratchpad show
+
 bindsym $mod+x exec --no-startup-id /usr/local/bin/screen-lock 
 bindsym $mod+c exec --no-startup-id i3-msg workspace 10; exec st -n music -e cmus;
 
